--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,42 +1,129 @@
 html {
   height: 100%;
-  background-color: #e4ded4;
-  margin: 0;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  
 }
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #e4ded4;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  padding-top: 35px;
 }
 a {
   color: #00B7FF;
 }
-.main {
-  width: 700px;
-  margin: 0 auto;
+
+.navbar .brand {
+  font-size: 17px;
+  margin-left: 5px;
 }
+
+.main {
+  margin: 0 auto;
+  float: none;
+  margin-top: 30px;
+}
+
+
 .main ul {
   list-style-type: none;
-  margin: 50px 0 200px;
+  margin: 30px 0 20px;
 }
 .buttons a {
   text-decoration: none;
 }
-li {
+.annotation-list li {
   /*background-size: 3px 3px, 100% 100%, 100% 100%;*/
 
   background: #fff;
-  border-radius: 15px;
+  border-radius: 6px;
   box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.5), inset 0 0 10px rgba(0, 0, 0, 0.5), 0 0 0 1px rgba(0, 0, 0, 0.1), 0 -1px 2px 1px rgba(0, 0, 0, 0.25), 0 2px 2px 1px rgba(255, 255, 255, 0.5), 0 -2px 10px 2px rgba(255, 255, 255, 0.75), 0 2px 10px 2px rgba(0, 0, 0, 0.25);
-  padding: 2px 10px 10px;
+  padding: 10px;
   margin-bottom: 20px;
 }
-li.objective {
+.annotation-list li.objective {
   background: #49afcd;
 }
-li.positive {
+.annotation-list li.positive {
   background: #5bb75b;
 }
-li.negative {
+.annotation-list li.negative {
   background: #da4f49;
+}
+
+form {
+  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.5), inset 0 0 10px rgba(0, 0, 0, 0.5), 0 0 0 1px rgba(0, 0, 0, 0.1), 0 -1px 2px 1px rgba(0, 0, 0, 0.25), 0 2px 2px 1px rgba(255, 255, 255, 0.5), 0 -2px 10px 2px rgba(255, 255, 255, 0.75), 0 2px 10px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+  background: #fcf8e3;
+  padding: 20px;
+}
+form input[type='text'] {
+  width: 93%;
+}
+
+form .checkbox-text {
+  margin-left: 28px;
+}
+
+/** Checkbox style */
+
+input[type="checkbox"] {
+    background-image: -webkit-linear-gradient(hsla(0,0%,0%,.1), hsla(0,0%,100%,.1)),
+                      -webkit-linear-gradient(left, #f66 50%, #6cf 50%);
+    background-size: 100% 100%, 200% 100%;
+    background-position: 0 0, 5px 0;
+    border-radius: 25px;
+    box-shadow: inset 0 1px 4px hsla(0,0%,0%,.5),
+                inset 0 0 10px hsla(0,0%,0%,.5),
+                0 0 0 1px hsla(0,0%,0%,.1),
+                0 -1px 2px 1px hsla(0,0%,0%,.25),
+                0 2px 2px 1px hsla(0,0%,100%,.5),
+                0 -2px 10px 2px hsla(0,0%,100%,.75),
+                0 2px 10px 2px hsla(0,0%,0%,.25);
+    cursor: pointer;
+    height: 10px;
+    padding-right: 10px;
+    position: relative;
+    width: 20px;
+    -webkit-appearance: none;
+    -webkit-transition: .15s;
+}
+input[type="checkbox"]:after {
+    background-color: #eee;
+    background-image: -webkit-linear-gradient(hsla(0,0%,100%,.1), hsla(0,0%,0%,.1));
+    border-radius: 25px;
+    box-shadow: inset 0 1px 1px 1px hsla(0,0%,100%,1),
+                inset 0 -1px 1px 1px hsla(0,0%,0%,.25),
+                0 1px 3px 1px hsla(0,0%,0%,.5),
+                0 0 2px hsla(0,0%,0%,.25);
+    content: '';
+    display: block;
+    height: 10px;
+    left: 0;
+    position: relative;
+    top: 0;
+    width: 10px;
+}
+input[type="checkbox"]:checked {
+    background-position: 0 0, 15px 0;
+    padding-left: 10px;
+    padding-right: 0;
+}
+input[type="checkbox"]:before {
+    background: hsla(0,0%,0%,.25);
+    border-radius: 10px;
+    color: #e4ded4;
+    content: '✘';
+    font: 12px/20px sans-serif;
+    height: 20px;
+    left: 25px;
+    letter-spacing: 1px;
+    position: absolute;
+    text-align: center;
+    text-transform: uppercase;
+    top: -5px;
+    width: 20px;
+}
+input[type="checkbox"]:checked:before {
+    content: '✔';
 }
