Typo fixes :punch:

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ block content
       h2#help-modal-label Annotation Help
     div.modal-body
       p We are constructing a data set for doing Sentiment Analysis on Twitter data. 
-        | This means we are trying to read a random tweet and classify whether the tweet is objective 
+        | This means that we are trying to read a random tweet and classify whether the tweet is objective 
         | (neutral, no sentiment at all) or subjective. If the tweet is classified as subjective 
         | the polarity of the tweet is classified (if the tweet is with positive or negative intent).
 
@@ -33,7 +33,7 @@ block content
           | you annotate. This is so we can calculate annotators accuracy.
         li 
           strong Annotate by using the buttons. 
-          | There are three labels: objective (or neutral), positive and negative. Pick the 
+          | There are three labels: objective (neutral), positive and negative. Pick the 
           | one you feel represents the sentiment of the tweet. 
           br
           strong Pro tip: 
