Added skip button to ignore tweets :bowtie:

--- a/views/index.jade
+++ b/views/index.jade
@@ -78,6 +78,7 @@ block content
     <a class="objective btn btn-info" href="#">Objective</a>
     <a class="positive btn btn-success" href="#">Positive</a>
     <a class="negative btn btn-danger" href="#">Negative</a>
+    <a class="skip btn btn-inverse" href="#">Skip</a>
     </div>
 
   script(src="js/vendor/require.js")
